# deltafw-k1-k5v3

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile-with-docker.sh  config.toml  pwr_sim.py
.agent/rules/: uvk5v3-uvk1-dev-guide.md
.github/workflows/: main.yml
App/: CMakeLists.txt  misc.c  misc.h  radio.c  settings.c
App/app/: app.c  main.c  menu.c  motorcycle.c  motorcycle.h  spectrum.c
App/ui/: menu.c  menu.h
src/: CMakeLists.txt  audio.c  board.c  board.h  frequencies.c  frequencies.h  functions.c  functions.h  radio.c  radio.h  screencast.c  screencast.h
src/apps/: settings_new.c
src/apps/aircopy/: aircopy.c  aircopy.h  aircopy_ui.c
src/apps/battery/: battery.c  battery.h  battery_ui.c
src/apps/boot/: boot.c  boot.h  welcome.c
src/apps/fm/: fm.c  fm.h  fm_ui.c
src/apps/launcher/: launcher.c
src/apps/liveseek/: liveseek.c  liveseek.h
src/apps/memories/: memories.c  memories.h
src/apps/scanner/: chFrScanner.c  scanner.c  scanner.h  scanner_ui.c
src/apps/security/: passcode.c  passcode.h
src/apps/settings/: settings.c  settings.h  settings_ui.c  settings_ui.h
src/apps/spectrum/: spectrum.c  spectrum.h  spectrum_waterfall.c  spectrum_waterfall.h
src/apps/sysinfo/: sysinfo.c
src/core/: board.c  board.h  debugging.h  main.c  misc.c  misc.h  py32f071xb_lld.ld  scheduler.c  scheduler.h  version.c
src/drivers/bsp/: adc.c  adc.h  backlight.c  bk1080-regs.h  bk1080.c  bk1080.h  bk4819-regs.h  bk4819.c  bk4819.h  bk4829.c  eeprom_compat.c  flash.c  keyboard.c  keyboard.h  py25q16.c  st7565.c  vcp.c  vcp.h
src/features/: action.c  action.h  app.c  breakout.c  cw.c  cw.h  generic.c  main_screen.c  menu.c  storage.c  storage.h  uart.c
src/features/action/: action.c
src/features/am_fix/: am_fix.c
src/features/app/: app.c  app.h
src/features/audio/: audio.c  audio.h
src/features/breakout/: breakout.c  breakout.h
src/features/common/: common.c  common.h
src/features/cw/: cw.c  cw.h
src/features/dcs/: dcs.c
src/features/dtmf/: dtmf.c
src/features/flashlight/: flashlight.c  flashlight.h
src/features/generic/: generic.c
src/features/keyboard/: keyboard_state.h
src/features/main_screen/: main_screen.c  main_screen.h
src/features/menu/: menu.c  menu.h
src/features/radio/: frequencies.c  functions.c  radio.c  radio.h
src/features/rega/: rega.c
src/features/rx/: signal_classifier.c  signal_classifier.h  signal_quality.c  signal_quality.h  smart_squelch.c  smart_squelch.h  squelch_tail.c  squelch_tail.h
src/features/scan/: dual_watch_mgmt.c  dual_watch_mgmt.h  scanwatch.c  scanwatch.h
src/features/screencast/: screencast.c
src/features/sram/: sram-overlay.c  sram-overlay.h
src/features/storage/: storage.c  storage.h
src/features/tx/: ctcss_lead.c  ctcss_lead.h  tx_compressor.c  tx_compressor.h  tx_soft_start.c  tx_soft_start.h
src/features/uart/: uart.c
src/helper/: chacha20.c  chacha20.h  crypto.c  crypto.h  identifier.c  identifier.h  poly1305.c  poly1305.h  trng.c  trng.h
src/middlewares/CherryUSB/class/audio/: usbd_audio.c  usbd_audio.h
src/ui/: ag_graphics.c  ag_graphics.h  ag_menu.c  ag_menu.h  bar.c  bitmaps.c  font.c  font.h  freqinput.c  freqinput.h  helper.c  helper.h  hexdump.c  hexdump.h  inputbox.c  inputbox.h  main.c  main.h  menu.c  menu.h  status.c  status.h  textinput.c  textinput.h  ui.c  ui.h
src/usb/: usbd_cdc_if.c
toolchain/: CMakeLists.txt  CMakePresets.json  Dockerfile  build.zig  build.zig.zon  build_formatter.py  compile-with-docker.sh  compile-with-meson.sh  compile-with-zig.sh  compile.py  config_parser.py  cross_arm.ini  flasher.py  menuconfig.py  meson.build  meson_options.txt  prog.py  qsh.hexpat  qsh_packer.py  qshfw_packer.py  release_helper.py  zig_build_formatter.py  zig_config.py
toolchain/.zig-cache/o/1478a3ad60e19287272430574daa339c/: deltafw
toolchain/.zig-cache/o/1856cea481dc587bfe04b3e25c1e361d/: deltafw
toolchain/.zig-cache/o/20e467e4b3e7b82a0d9de0abc152cb56/: deltafw
toolchain/.zig-cache/o/39a66300be59422c7baec251a6683f77/: deltafw
toolchain/.zig-cache/o/477f02cb330acaedfd1eab9ca58773c1/: deltafw
toolchain/.zig-cache/o/4c8c1015938296f464d7bbb29a1ca41c/: deltafw
toolchain/.zig-cache/o/5d2a5f882372f87d62715c4c1b037608/: deltafw
toolchain/.zig-cache/o/6a71212bd5c05cf1adf3482fce508f00/: deltafw
toolchain/.zig-cache/o/953ca6e6ef18af672b30ea9f4a4b104e/: deltafw
toolchain/.zig-cache/o/abde97e738ee03bf100ece7ac1c65294/: deltafw
toolchain/.zig-cache/o/c134d09f73d465e352c6762b08fd6ef0/: deltafw
toolchain/.zig-cache/o/c300d638a3444c9cfec1bdcf82705e02/: deltafw
toolchain/.zig-cache/o/c38e641276e9040191294a3f2ae26509/: deltafw
toolchain/.zig-cache/o/ee5851b679fdaecd1b919f5dc8530de7/: deltafw
toolchain/.zig-cache/o/f5959c0e60257ef07eabffc34acd91b9/: deltafw
toolchain/.zig-cache/o/f7f64a8db53b0e84f91e4805ac49d97b/: deltafw
toolchain/libc_shim/: assert.h  libc_shim.c  stdio.h  stdlib.h  string.h
tools/: menuconfig.py
tools/unbrick_k5_v1/: README.md
