option('ENABLE_AIRCOPY', type: 'boolean', value: false, description: 'Enable Air Copy')
option('ENABLE_UART', type: 'boolean', value: true, description: 'Enable UART')
option('ENABLE_USB', type: 'boolean', value: true, description: 'Enable USB')
option('ENABLE_SERIAL_SCREENCAST', type: 'boolean', value: false, description: 'Enable Serial Screencast')
option('ENABLE_UART_CMD_RSSI', type: 'boolean', value: true, description: 'Enable UART RSSI Command')
option('ENABLE_UART_CMD_BATT', type: 'boolean', value: true, description: 'Enable UART Battery Command')
option('ENABLE_UART_CMD_ID', type: 'boolean', value: true, description: 'Enable UART ID Command')
option('ENABLE_EXTRA_UART_CMD', type: 'boolean', value: false, description: 'Enable Extra UART Commands')
option('ENABLE_FMRADIO', type: 'boolean', value: false, description: 'Enable FM Radio')
option('ENABLE_VOICE', type: 'boolean', value: false, description: 'Enable Voice')
option('ENABLE_PWRON_PASSWORD', type: 'boolean', value: false, description: 'Enable Power-on Password')
option('ENABLE_FLASHLIGHT', type: 'boolean', value: true, description: 'Enable Flashlight')
option('ENABLE_ALARM', type: 'boolean', value: false, description: 'Enable Alarm')
option('ENABLE_TX1750', type: 'boolean', value: true, description: 'Enable TX 1750Hz')
option('ENABLE_VOX', type: 'boolean', value: true, description: 'Enable VOX')
option('ENABLE_NOAA', type: 'boolean', value: false, description: 'Enable NOAA')
option('ENABLE_NARROWER_BW_FILTER', type: 'boolean', value: true, description: 'Enable Narrower Bandwidth Filter')
option('ENABLE_WIDE_RX', type: 'boolean', value: true, description: 'Enable Wide RX')
option('ENABLE_TX_NON_FM', type: 'boolean', value: true, description: 'Enable TX Non-FM')
option('ENABLE_SQUELCH_MORE_SENSITIVE', type: 'boolean', value: true, description: 'Enable More Sensitive Squelch')
option('ENABLE_CTCSS_TAIL_PHASE_SHIFT', type: 'boolean', value: false, description: 'Enable CTCSS Tail Phase Shift')
option('ENABLE_REDUCE_LOW_MID_TX_POWER', type: 'boolean', value: false, description: 'Enable Reduce Low/Mid TX Power')
option('ENABLE_BYP_RAW_DEMODULATORS', type: 'boolean', value: true, description: 'Enable Bypass/Raw Demodulators')
option('ENABLE_RESCUE_OPERATIONS', type: 'boolean', value: false, description: 'Enable Rescue Operations')
option('ENABLE_SCAN_RANGES', type: 'boolean', value: true, description: 'Enable Scan Ranges')
option('ENABLE_BIG_FREQ', type: 'boolean', value: true, description: 'Enable Big Frequency Display')
option('ENABLE_SMALL_BOLD', type: 'boolean', value: true, description: 'Enable Small Bold Font')
option('ENABLE_INVERTED_LCD_MODE', type: 'boolean', value: true, description: 'Enable Inverted LCD Mode')
option('ENABLE_LCD_CONTRAST_OPTION', type: 'boolean', value: true, description: 'Enable LCD Contrast Option')
option('ENABLE_RSSI_BAR', type: 'boolean', value: true, description: 'Enable RSSI Bar')
option('ENABLE_AUDIO_BAR', type: 'boolean', value: true, description: 'Enable Audio Bar')
option('ENABLE_SHOW_CHARGE_LEVEL', type: 'boolean', value: false, description: 'Enable Show Charge Level')
option('ENABLE_USBC_CHARGING_INDICATOR', type: 'boolean', value: true, description: 'Enable USB-C Charging Indicator')
option('ENABLE_REVERSE_BAT_SYMBOL', type: 'boolean', value: false, description: 'Enable Reverse Battery Symbol')
option('ENABLE_BOOT_BEEPS', type: 'boolean', value: false, description: 'Enable Boot Beeps')
option('ENABLE_BOOT_RESUME_STATE', type: 'boolean', value: true, description: 'Enable Boot Resume State')
option('ENABLE_DEEP_SLEEP_MODE', type: 'boolean', value: true, description: 'Enable Deep Sleep Mode')
option('ENABLE_RX_TX_TIMER_DISPLAY', type: 'boolean', value: true, description: 'Enable RX/TX Timer Display')
option('ENABLE_NO_CODE_SCAN_TIMEOUT', type: 'boolean', value: true, description: 'Enable No Code Scan Timeout')
option('ENABLE_BLMIN_TMP_OFF', type: 'boolean', value: false, description: 'Enable BLMIN_TMP_OFF')
option('ENABLE_KEEP_MEM_NAME', type: 'boolean', value: true, description: 'Enable Keep Memory Name')
option('ENABLE_COPY_CHAN_TO_VFO', type: 'boolean', value: true, description: 'Enable Copy Channel to VFO')
option('ENABLE_CUSTOM_MENU_LAYOUT', type: 'boolean', value: true, description: 'Enable Custom Menu Layout')
option('ENABLE_CW_KEYER', type: 'boolean', value: true, description: 'Enable CW Keyer')
option('ENABLE_DTMF_CALLING', type: 'boolean', value: false, description: 'Enable DTMF Calling')
option('ENABLE_SPECTRUM', type: 'boolean', value: false, description: 'Enable Spectrum Analyzer')
option('ENABLE_SPECTRUM_EXTENSIONS', type: 'boolean', value: true, description: 'Enable Spectrum Extensions')
option('ENABLE_APP_BREAKOUT_GAME', type: 'boolean', value: false, description: 'Enable Breakout Game')
option('ENABLE_REGA', type: 'boolean', value: false, description: 'Enable REGA')
option('ENABLE_PMR446_FREQUENCY_BAND', type: 'boolean', value: false, description: 'Enable PMR446 Frequency Band')
option('ENABLE_GMRS_FRS_MURS_BANDS', type: 'boolean', value: false, description: 'Enable GMRS/FRS/MURS Bands')
option('ENABLE_FREQUENCY_LOCK_REGION_CA', type: 'boolean', value: true, description: 'Enable Frequency Lock Region CA')
option('ENABLE_CUSTOM_FIRMWARE_MODS', type: 'boolean', value: true, description: 'Enable Custom Firmware Mods')
option('ENABLE_SYSTEM_INFO_MENU', type: 'boolean', value: false, description: 'Enable System Info Menu')
option('ENABLE_F_CAL_MENU', type: 'boolean', value: false, description: 'Enable F_CAL Menu')
option('ENABLE_RESET_CHANNEL_FUNCTION', type: 'boolean', value: false, description: 'Enable Reset Channel Function')
option('ENABLE_EEPROM_HEXDUMP', type: 'boolean', value: true, description: 'Enable EEPROM Hexdump')
option('ENABLE_FIRMWARE_DEBUG_LOGGING', type: 'boolean', value: false, description: 'Enable Firmware Debug Logging')
option('ENABLE_IDENTIFIER', type: 'boolean', value: true, description: 'Enable Identifier')
option('ENABLE_AGC_SHOW_DATA', type: 'boolean', value: false, description: 'Enable AGC Show Data')
option('ENABLE_UART_RW_BK_REGS', type: 'boolean', value: false, description: 'Enable UART RW BK Regs')
option('ENABLE_SWD', type: 'boolean', value: false, description: 'Enable SWD')
option('ENABLE_FASTER_CHANNEL_SCAN', type: 'boolean', value: true, description: 'Enable Faster Channel Scan')
option('EDITION_STRING', type: 'string', value: 'Custom', description: 'Edition String')
